# PR_agent_v1

./: .env.production.template  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CLEAN.md  README.md  REVOLUTIONARY_SECURITY_ARCHITECTURE.md  SECURITY_ENHANCEMENT_SUMMARY.md  check_dependencies.sh  main.py  pr_diff.txt  pyproject.toml  render.yaml  requirements.txt  run_pr_agent.py
api/: requirements.txt
backend/: app.py  pr_diff.txt  requirements.txt
frontend/: .env.production  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: OutputRenderer.jsx
src/pr_agent/: __init__.py  agents.py  main.py  tasks.py  tools.py
